<resources>
    <string name="app_name">FitnessKitTestApp</string>
    <string name="lessons">Занятия</string>
    <string name="requests">Заявки</string>
    <string name="add">Добавить</string>
    <string name="chat">Чат</string>
    <string name="more">Ещё</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Расписание</string>
    <string name="network_request_failure">Не получается обновить данные.\nЧто-то пошло не так.</string>
    <string name="network_connection_error">Не получается обновить данные.\nВозможно соединение с интернетом прервано.</string>
</resources>